addons/overlays/development/selenium-grid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-hub
  namespace: selenium-grid
spec:
  ingressClassName: nginx
  rules:
  - host: selenium-hub.dev1.devops.com
    http:
      paths:
      - backend:
          service:
            name: selenium-hub
            port:
              number: 4444
        path: /
        pathType: Prefix
